--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "history-of-open-web-standards-bespoke",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "bespoke": "~0.4.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.4.0",
